# bookapp-with-graphql

./: .gitignore  README.md  pyproject.toml
books/: models.py  schema.py  urls.py
main/: settings.py  urls.py
users/: models.py  schema.py
